1. change name from CustomLayout to CarouselView 2. update CarouselView 's package 3. add IPageProvider to recieve change page event

--- a/src/CustomLayoutsDemo/CustomLayoutsDemo.csproj
+++ b/src/CustomLayoutsDemo/CustomLayoutsDemo.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CustomLayouts\CustomLayouts.csproj" />
+    <ProjectReference Include="..\CustomLayouts\CarouselView.csproj" />
   </ItemGroup>
 
 </Project>
