--- a/src/CustomLayouts/CarouselView.csproj
+++ b/src/CustomLayouts/CarouselView.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.2;netstandard2.0;MonoAndroid80;Xamarin.iOS10;</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;MonoAndroid80;Xamarin.iOS10;</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/aritchie/userdialogs</PackageProjectUrl>
@@ -28,12 +28,8 @@
   <ItemGroup>
     <Compile Remove="Platforms\**\*.cs" />
     <None Include="Platforms\**\*.cs" />
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.0" PrivateAssets="all" />
+    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.1" PrivateAssets="all" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.2' ">
-    <Compile Include="Platforms\Shared\**\*.cs" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
@@ -44,8 +40,15 @@
     <Compile Include="Platforms\Shared\**\*.cs" />
     <Compile Include="Platforms\Android\**\*.cs" />
     <PackageReference Include="NETStandard.Library" Version="2.0.1" />
-    <PackageReference Include="AndHUD" Version="1.2.0" />
-    <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
+    <PackageReference Include="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.1.0.1"/>
+    <PackageReference Include="Xamarin.Android.Support.Design" version="26.1.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v4" version="26.1.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" version="26.1.0.1"/>
+    <PackageReference Include="Xamarin.Android.Support.v7.CardView" version="26.1.0.1"/>
+    <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" version="26.1.0.1"/>
+    <PackageReference Include="Xamarin.Android.Support.v7.RecyclerView" version="26.1.0.1"/>
+    <PackageReference Include="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" />
+    <PackageReference Include="Xamarin.Forms" version="2.5.0.122203"/>
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'Xamarin.iOS10' ">
@@ -53,7 +56,10 @@
     <Compile Include="Platforms\ios\**\*.cs" />
     <Reference Include="OpenTK-1.0" />
     <PackageReference Include="NETStandard.Library" Version="2.0.1" />
-    <PackageReference Include="BTProgressHUD" Version="1.2.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
