--- a/src/CustomLayoutsDemo/CustomLayoutsDemo.csproj
+++ b/src/CustomLayoutsDemo/CustomLayoutsDemo.csproj
@@ -1,16 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\CustomLayouts\CarouselView.csproj" />
   </ItemGroup>
-
 </Project>
